# xbnet

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  tests.yml
doc/: Makefile  xbnet.1  xbnet.1.md
src/: main.rs  ping.rs  pipe.rs  ser.rs  tap.rs  tun.rs  txpacket.rs  xb.rs  xbpacket.rs  xbrx.rs
