#    Copyright (C) 2019-2020  John Goerzen <jgoerzen@complete.org
#
#    This program is free software: you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    This program is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.


[package]
name = "xbnet"
version = "1.1.0"
authors = ["John Goerzen <jgoerzen@complete.org>"]
edition = "2018"
license = "GPL-3.0+"
description = "Run TCP/IP over XBee RF radio links"
homepage = "https://github.com/jgoerzen/xbnet"
repository = "https://github.com/jgoerzen/xbnet"
readme = "README.md"
keywords = ["radio", "networking", "serial", "xbee"]
categories = ["embedded", "network-programming", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "3.3.0"
log = "0.4"
simplelog = {version = "^0.7.4", default-features = false}
hex = "0.4.2"
crossbeam-channel = "0.3.9"
format_escape_default = "0.1.1"
structopt = {version = "0.3", default-features = false}
tun-tap = {version = "0.1.2", default-features = false}
bytes = "0.5"
etherparse = "0.9.0"
